<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/anim_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anim" />

    <!-- Row 1 -->
    <Button
        android:id="@+id/BTNblink"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#987371"
        android:text="@string/blink"
        app:layout_constraintBottom_toTopOf="@+id/BTNmove"
        app:layout_constraintEnd_toStartOf="@+id/BTNrotate"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/BTNrotate"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#987371"
        android:text="@string/rotate"
        app:layout_constraintBottom_toBottomOf="@+id/BTNblink"
        app:layout_constraintEnd_toStartOf="@+id/BTNfade"
        app:layout_constraintStart_toEndOf="@+id/BTNblink"
        app:layout_constraintTop_toTopOf="@+id/BTNblink" />

    <Button
        android:id="@+id/BTNfade"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#987371"
        android:text="@string/fade"
        app:layout_constraintBottom_toBottomOf="@+id/BTNblink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BTNrotate"
        app:layout_constraintTop_toTopOf="@+id/BTNblink" />

    <!-- Row 2 -->
    <Button
        android:id="@+id/BTNmove"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#987371"
        android:text="@string/move"
        app:layout_constraintBottom_toTopOf="@+id/BTNstop"
        app:layout_constraintEnd_toStartOf="@+id/BTNslide"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNblink" />

    <Button
        android:id="@+id/BTNslide"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#987371"
        android:text="@string/slide"
        app:layout_constraintBottom_toBottomOf="@+id/BTNmove"
        app:layout_constraintEnd_toStartOf="@+id/BTNzoom"
        app:layout_constraintStart_toEndOf="@+id/BTNmove"
        app:layout_constraintTop_toTopOf="@+id/BTNmove" />

    <Button
        android:id="@+id/BTNzoom"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#987371"
        android:text="@string/zoom"
        app:layout_constraintBottom_toBottomOf="@+id/BTNmove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BTNslide"
        app:layout_constraintTop_toTopOf="@+id/BTNmove" />

    <Button
        android:id="@+id/BTNstop"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#987371"
        android:text="@string/stop_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>